# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  STRUCTURE.md  pyproject.toml
alembic/: env.py
alembic/versions/: dffcb9a77277_create_users_table.py
app/: main.py  router.py
app/common/: base_model.py  base_repository.py
app/core/: config.py  database.py  dependency.py  exception.py  logging.py  redis.py  security.py
app/middleware/: __init__.py  cors.py  logging.py
app/modules/auth/: dependency.py  repository.py  router.py  schema.py  service.py
app/modules/users/: dependency.py  model.py  repository.py  router.py  schema.py  service.py
